tests/success/match_expression_reference_const_propagation.bz
function main()
{
	let i = 0;

	let p: *int32 = &i;

	let _: &const *const int32 = p;
}
