tests/error/comptime/pointer_arithmetic01.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		foo() + 0;
	});
}
